...
              ),
            ),
            Positioned(
              bottom: 50.0,
              left: 60.0,
              child: CustomTextButton(
                key: Key('dark'),
                onPressed: () {
                  if (initialize) {
                    context.read<LyricsCubit>().getLyrics();
                  } else {
                    Navigator.of(context).pop();
                  }
...
              ),
            ),
            Positioned(
              bottom: 50.0,
              right: 60.0,
              child: CustomTextButton(
                key: Key('light'),
                backgroundColor: Colors.black,
                foregroundColor: Colors.white,
                onPressed: () {
                  if (initialize) {
                    context.read<LyricsCubit>().getLyrics();
                  } else {
...
