...
  Widget build(BuildContext context) {
    Size size = MediaQuery.of(context).size;
    return Scaffold(
      body: DefaultTabController(
        length: 2,
        child: NestedScrollView(
          key: Key('details_scroll'),
          headerSliverBuilder: (context, value) {
            return [
              CustomAppBar(
                tag: widget.item.id.toString(),
                bottomBlur: false,
                imagePath: widget.item.imagePath,
...
                    tabs: [
                      Tab(
                          key: Key('lyrics_tab'),
                          icon: Icon(Icons.library_music_sharp),
                          text: "Lyrics"),
                      Tab(
                          key: Key('details_tab'),
                          icon: Icon(Icons.info_outline),
                          text: "Details"),
                    ],
                  ),
                ),
                pinned: true,
...
