...
              _lists = content.data!.map(_buildList).toList();
              return Stack(
                children: [
                  RefreshIndicator(
                    onRefresh: _refreshList,
                    child: CustomScrollView(
                      key: Key('main_scroll'),
                      controller: _scrollController,
                      slivers: [
                        _appBar(context, size, featured!),
                        _list(),
                      ],
                    ),
                  ),
                  Positioned(
                    bottom: 10.0,
                    right: 25.0,
                    child: FloatingActionButton(
                      key: Key('select_theme'),
                      onPressed: () async {
                        await Navigator.of(context)
                            .push(CustomPageRoute(ThemeScreen()));
                      },
                      child: Icon(
                        Icons.settings_brightness_rounded,
...
