...
            children: [
              Wrap(
                children: [
                  Opacity(
                    opacity: appear(shrinkOffset),
                    child: IconButton(
                        key: Key('back'),
                        iconSize: 24,
                        onPressed: () {
                          if (appear(shrinkOffset) >
                              0) // to avoid going back to the main page when no icon
                            Navigator.pop(context);
                        },
...
